--- a/Intents/app/src/main/AndroidManifest.xml
+++ b/Intents/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
                 <data android:scheme="mailto" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+	<intent-filter>
+
+		<action android:name="android.intent.action.VIEW"/>
+
+		<data android:scheme="geo"/>
+
+		<category android:name="android.intent.category.DEFAULT"/>
+
+		</intent-filter>
 
 
         </activity>
